k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - env:
            - name: SPRING_DATA_MONGODB_URI
              value: "mongodb://root:password@db:27017/paint?authSource=admin"
          image: ghcr.io/bartlomiejrasztabiga/paint/backend
          name: backend
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /uploads
              name: uploads
      restartPolicy: Always
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: backend-data
