k8s/keycloak-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  serviceName: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - image: quay.io/keycloak/keycloak:21.1.1
          args: ["start-dev"]
          name: keycloak
          ports:
            - name: http
              containerPort: 8080
            - name: https
              containerPort: 8443
      restartPolicy: Always
