k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  ports:
    - name: "27017"
      port: 27017
      targetPort: 27017
  selector:
    app: db
