k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
    - name: "5173"
      port: 5173
      targetPort: 5173
  selector:
    app: frontend
